--- a/pw_u1_p5_sc/html/paginaIndexable.html
+++ b/pw_u1_p5_sc/html/paginaIndexable.html
@@ -24,7 +24,7 @@
                 <li>Marcas</li>
             </ul>
         </nav>
-        <section>
+        <section class="seccion">
             <ul>
                 <li>Carros</li>
                 <li>Ventas</li>
@@ -56,7 +56,7 @@
                 </footer>
             </article>
         </section>
-        <aside>
+        <aside id="idreferencias">
             <blockquote cite="https://www.google.com/">
                 si deseas mas informacion busca en google
             </blockquote>
@@ -64,7 +64,7 @@
                 si deseas el origen de la info, busca aqui
             </blockquote>
         </aside>
-        <footer>
+        <footer class="piedepag">
             Derechos Reservados 2010-2023
         </footer>
     </div>
