--- a/pw_u1_p5_sc/html/Calculadora ExternaLambda.html
+++ b/pw_u1_p5_sc/html/Calculadora ExternaLambda.html
@@ -24,8 +24,8 @@
         <label for="idnumero2">Número 2</label>
         <input type="number" id="idnumero2">
 
-        <img id="idimg1" src="https://i.pinimg.com/736x/ae/ca/bb/aecabbb80f83af71ad05737e2ae2a483.jpg" alt="no se pudo">
-
+        <!--<img id="idimg1" src="https://i.pinimg.com/736x/ae/ca/bb/aecabbb80f83af71ad05737e2ae2a483.jpg" alt="no se pudo">
+        -->
         <button onclick="cambiarCompleto()">Cambiar
             imagen</button>
         <label id="idresultado" for=""></label>
