--- a/pw_u1_p5_sc/html/estudianteFormulario.html
+++ b/pw_u1_p5_sc/html/estudianteFormulario.html
@@ -26,7 +26,7 @@
                 <p type="Hobbi:"> <input type="text"> </p>
                 <p type="Genero:"> <input type="text"> </p>
                 <p type="Ciudad:"> <input type="text"> </p>
-                <button>Guardar</button>
+                <button>Guardar &#128526;</button>
             </form>
         </section>
         <footer></footer>
