--- a/pw_u1_p5_sc/html/Estil.html
+++ b/pw_u1_p5_sc/html/Estil.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/Estil.css">
+    <script src="../js/Estil.js"></script>
 </head>
 
 <body>
@@ -14,25 +15,25 @@
     <section>
         <div class="container">
             <div class="calculadora">
-                <div class="display">RESULTADO</div>
-                <button>&#8705;</button>
-                <button>&#10229;</button>
-                <button>&#37;</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>&#215;</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>&#8208;</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>&#43;</button>
-                <button>0</button>
-                <button>&#183;</button>
-                <button>&#61;</button>
+                <div id="muestra" class="display">RESULTADO</div>
+                <button onclick="reset()" class="bt_s">&#8705;</button>
+                <button onclick="borrar()">&#10229;</button>
+                <button onclick="operacion('/')">/</button>
+                <button onclick="ingresa('7')">7</button>
+                <button onclick="ingresa('8')">8</button>
+                <button onclick="ingresa('9')">9</button>
+                <button onclick="operacion('*')">&#215;</button>
+                <button onclick="ingresa('4')">4</button>
+                <button onclick="ingresa('5')">5</button>
+                <button onclick="ingresa('6')">6</button>
+                <button onclick="operacion('-')">&#8208;</button>
+                <button onclick="ingresa('1')">1</button>
+                <button onclick="ingresa('2')">2</button>
+                <button onclick="ingresa('3')">3</button>
+                <button onclick="operacion('+')">&#43;</button>
+                <button onclick="ingresa('0')" class="bt_s">0</button>
+                <button onclick="">&#183;</button>
+                <button onclick="resultado()">&#61;</button>
             </div>
         </div>
 
