--- a/pw_u1_p5_sc/html/paginaVue.html
+++ b/pw_u1_p5_sc/html/paginaVue.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
- 
+
 </head>
- 
+
 <body>
     <header></header>
     <nav></nav>
@@ -25,10 +25,26 @@
             <p>{{valor}}</p>
             <button v-on:click="CambiarMensaje()">Cambiar Mensaje</button>
             <button v-on:click="CambiarNumero()">sumar</button>
+            <hr />
+            <p>{{lista}}</p>
+            <label for="idnombre">Nombre</label>
+            <input v-on:Keypress="presioanndoTecla" id="idnombre" type="text" v-model="nombre">
+            <label for="idapellido">Apellido</label>
+            <input v-on:Keypress="presion" id="idapellido" type="text" v-model="apellido">
+            <button v-on:click="AgregarEstudiante()">Agregar</button>
+            {{nombre}}
+
+            <ul>
+                <!-- <li v-for="(estudiante, index) in lista">{{index+1}}:{{estudiante.nombre}} - {{ estudiante.apellido}} <button>EDITAR</button></li> -->
+                <!-- desestructuracion -->
+                <li v-for="({nombre,apellido}, index) in lista">{{index+1}}:{{nombre}} - {{ apellido}}
+                    <button >EDITAR</button></li>
+
+            </ul>
         </div>
     </section>
     <footer></footer>
     <script src="../js/app.js"></script>
 </body>
- 
+
 </html>
