--- a/pw_u1_p5_sc/html/paginaVue.html
+++ b/pw_u1_p5_sc/html/paginaVue.html
@@ -28,20 +28,21 @@
             <hr />
             <p>{{lista}}</p>
             <label for="idnombre">Nombre</label>
-            <input v-on:Keypress="presioanndoTecla" id="idnombre" type="text" v-model="nombre">
+            <input @Keypress="presioanndoTecla" id="idnombre" type="text" v-model="nombre">
+
             <label for="idapellido">Apellido</label>
-            <input v-on:Keypress="presion" id="idapellido" type="text" v-model="apellido">
-            <button v-on:click="AgregarEstudiante()">Agregar</button>
+            <input @Keypress.enter="AgregarEstudianteMod()" id="idapellido" type="text" v-model="apellido">
+            <button @click="AgregarEstudiante()">Agregar</button>
             {{nombre}}
 
             <ul>
                 <!-- <li v-for="(estudiante, index) in lista">{{index+1}}:{{estudiante.nombre}} - {{ estudiante.apellido}} <button>EDITAR</button></li> -->
                 <!-- desestructuracion -->
-                <li v-for="({nombre,apellido}, index) in lista">{{index+1}}:{{nombre}} - {{ apellido}}
-                    <button >EDITAR</button></li>
+                <li v-show="nombre!==''" v-for="({nombre,apellido}, index) in lista">{{index+1}}:{{nombre}} - {{ apellido}}
+                    <button v-if="nombre!==undefined" >EDITAR</button></li>
 
             </ul>
-        </div>
+        </div>      
     </section>
     <footer></footer>
     <script src="../js/app.js"></script>
